--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,14 @@ body {
   font-size: 1.5em;
 }
 
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Inter', sans-serif;
+}
+
 #floating-button {
   position: fixed;
   bottom: 20px;
@@ -55,14 +63,19 @@ dt {
   font-weight: 500;
 }
 
+.agenda-day h3 {
+  margin-bottom: 0;
+}
+
 .agenda dl {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   row-gap: 8px;
+  margin-top: 0.5rem;
 }
 .agenda dt {
-  width: 35%;
+  width: 50%;
   margin: 0;
 }
 
@@ -128,7 +141,7 @@ h1 {
   margin-top: 0;
 }
 h2 {
-  font-size: 3rem;
+  font-size: 2.75rem;
   margin-bottom: 0;
 }
 h2 {
@@ -323,7 +336,11 @@ section {
   }  
   .description {
     font-size: 1.75rem;
-  }    
+  }
+  .agenda dt {
+    width: 35%;
+    margin: 0;
+  }
 }
 
 /* Utilitiy classes */
