--- a/styles.css
+++ b/styles.css
@@ -167,17 +167,22 @@ section {
   display: flex;
 }
 
-.rsvp-container {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 999;
-  background-color: white;
-  padding: 20px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+#rsvp-container {
+  width: 108%;
+  margin-left: 0.5rem;
+  height: 100%;
 }
+
+#rsvp-container iframe {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+#rsvp-container button {
+  margin-right: 1.5rem;
+}
+
 
 .rsvp-btn {
   cursor: pointer;
@@ -340,6 +345,17 @@ section {
   .agenda dt {
     width: 35%;
     margin: 0;
+  }
+  #rsvp-container {
+    width: initial;
+    margin-left: 0;
+    height: initial;
+  }
+  
+  #rsvp-container iframe {
+    width: 640px;
+    height: 640px;
+    overflow: auto;
   }
 }
 
